k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-web
  namespace: dz2-3
  labels:
    app: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.2
        volumeMounts:
          - name: nginx-index-file
            mountPath: /usr/share/nginx/html/
      - name: multitool
        image: wbitt/network-multitool
      volumes:
        - name: nginx-index-file
          configMap:
            name: configmap
