k8s/configmap.yml
apiVersion: v1
kind: Service
metadata:
  name: deployment-service
  namespace: dz2-3
spec:
  type: NodePort
  ports:
    - name: nginx
      port:  80
      nodePort: 32000
      protocol: TCP
      targetPort: 80
    - name: mt
      port:  8080
      nodePort: 32001
      protocol: TCP
      targetPort: 8080
  selector:
    app: main
