k8s/service_https.yml
apiVersion: v1
kind: Service
metadata:
  name: service-https
spec:
  selector:
    app: main
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
